Fixed spacing of nav and img

--- a/css/index.css
+++ b/css/index.css
@@ -73,7 +73,7 @@ p {
 
 nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: baseline;
     margin: 20px 0px 40px 0px;
     padding-left: 0px;
@@ -83,10 +83,11 @@ nav {
 .top-nav {
     color: black;
     text-decoration: none;
+    margin-right: 40px;
 }
 
 .night-street {
-    
+    margin-bottom: 40px;
 }
 
 .top-content {
